--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,3 @@
-title: Your awesome title
-description: My awesome site
-permalink: /:slugified_categories/:title/
-
-date_format: "%b %-d, %Y"
-
 exclude:
   - "package*.json"
   - "*.config.js"
@@ -11,3 +5,14 @@ exclude:
   - README.md
   - LICENSE
   - Makefile
+
+### visible text ###
+
+title: Your awesome title
+description: My awesome site
+permalink: /:slugified_categories/:title/
+
+date_format: "%b %-d, %Y"
+
+
+
