--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "postinstall": "bundle install --path=vendor/bundle --jobs=4 --retry=3"
     },
     "dependencies": {
-        "alpinejs": "^3.2.3"
+        "alpinejs": "^3.2.3",
+        "jquery": "^3.6.1"
     },
     "devDependencies": {
         "@symfony/webpack-encore": "^1.5.0",
