--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     },
     "dependencies": {
         "alpinejs": "^3.2.3",
-        "jquery": "^3.6.1"
+        "jquery": "^3.6.1",
+        "jquery-ui": "^1.13.2"
     },
     "devDependencies": {
         "@symfony/webpack-encore": "^1.5.0",
