--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,10 @@ exclude:
   - LICENSE
   - Makefile
   - "*.code-workspace"
+  - "node_modules"
 
 include:
-  - assets/
+  - images
 
 ### visible text ###
 
